# pyspeos

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  CONTRUBUTORS.md  LICENSE  MyTestBench.py  README.md  README.rst  SECURITY.md  class_documentation.html  codecov.yml  docker-compose.yml  genindex.html  grpc_tools.html  ignore_words.txt  index.html  objects.inv  py-modindex.html  pyproject.toml  robots.txt  search.html  searchindex.js  setup.py  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/agents/: fix-bug.md  implement-feature.md  write-tests.md
.github/workflows/: ci_cd.yml  dependabot.yml  label.yml  main.yml  matrix-tests.yml  nightly.yml  pull-request.yml  release.yml  reusable-speos-tests.yml
_autosummary/: ansys.pyoptics.speos.grpc_stub.html
_sources/: grpc_tools.rst.txt  index.rst.txt
_sources/_autosummary/: ansys.pyoptics.speos.grpc_stub.rst.txt
app/: db_viewer.py
development-testing/feat-implement-timeline/: feat-timeline-v261.scdocx  feat-timeline.scdocx  feature_testing.py
doc/: Makefile  make.bat
doc/changelog.d/: 1000.fixed.md  1001.maintenance.md  1002.fixed.md  1004.added.md  1008.dependencies.md  1011.maintenance.md  1014.dependencies.md  1015.dependencies.md  1019.dependencies.md  1021.dependencies.md  1026.maintenance.md  1028.added.md  1032.dependencies.md  1033.dependencies.md  1034.dependencies.md  1036.dependencies.md  1038.added.md  1043.dependencies.md  1044.dependencies.md  1047.added.md  1048.added.md  1049.added.md  1050.added.md  1051.documentation.md  1057.maintenance.md  1059.dependencies.md  1062.added.md  1064.dependencies.md  1065.dependencies.md  1070.dependencies.md  1071.test.md  369.added.md  425.maintenance.md  427.maintenance.md  434.fixed.md  436.miscellaneous.md  441.dependencies.md  443.maintenance.md  444.maintenance.md  445.miscellaneous.md  (+288 more)
doc/source/: api.rst  changelog.rst  class_documentation.rst  conf.py  contributing.rst  examples.rst  grpc_stub.rst  grpc_tools.rst  index.rst
examples/: README.txt  core-modify-scene.py  core-object-link.py  core-scene-job.py  kernel-modify-scene.py  kernel-object-link.py  pvexample.py  script-lpf-preview.py  script-opt-prop.py  script-part.py  script-prism-example.py  script-project.py  script-sensor.py  script-simulation.py  script-source.py  script-spectrum.py  script_intensity.py  workflow-combine-speos.py  workflow-open-result.py
examples/core/: bsdf.py  component.py  display-source.py  lpf-preview.py  opt-prop.py  part.py  prism-example.py  project.py  sensor.py  simulation.py  source.py  source_thermic_example_tmp.py  texture.py  timeline.py
examples/kernel/: modify-scene.py  object-link.py  scene-job.py
examples/my_test/: geom_utils.py  scene_from_scratch.py
examples/workflow/: combine-speos.py  export-vtp.py  open-result.py
requirements/: requirements_build.txt  requirements_docs.txt  requirements_style.txt
tests/: __init__.py  conftest.py  helper.py  local_config.json  test_aaclient.py  test_anisotropic_bsdf.py  test_bsdf_creation.py  test_bsdf_re.py  test_camera_workflow.py  test_client.py  test_client_geometry.py  test_client_intensity_template.py  test_client_job.py  test_client_scene.py  test_client_sensor_template.py  test_client_simulation_template.py  test_client_sop_template.py  test_client_source_template.py  test_client_spectrum.py  test_client_vop_template.py  test_connection.py  test_eulumdat_file.py  test_ies_file.py  test_job.py  test_library.py  test_live_preview.py  test_logging.py  test_lpf_file_reader.py  test_lpfreader.py  test_sensor.py  test_simulation.py  test_spectral_bsdf.py  test_xmp_file.py  test_xmp_intensity_file.py  test_xmp_spectral_intensity_file.py
tests/assets/: AIR.material  Box.SPEOSLightBox  Colorimetric.xmp  Gaussian Fresnel 10 deg.anisotropicbsdf  IES_C_DETECTOR.ies  Index_1.5_Gradient_0.499_Abs_0.gradedmaterial  L100 2.simplescattering  PROJECT.Direct-no-Ray.Irradiance Ray Spectral.xmp  R04.spectrum  R_test.anisotropicbsdf  Rays.ray  RaysWithoutSpectralData.RAY  basic_1.lpf  basic_2.lpf  basic_DirectSimu.lpf  basic_InverseSimu.lpf  ref_tri.glb  stars.exr  test_spectral_bsdf_2D_data.csv
tests/core/: __init__.py  test_Intensity.py  test_OptProp.py  test_Part.py  test_Project.py  test_Sensor.py  test_Simulation.py  test_Source.py  test_Spectrum.py  test_bsdf.py  test_component.py  test_file_transfer.py  test_intensity.py  test_launcher.py  test_lxp.py  test_opt_prop.py  test_part.py  test_project.py  test_proto_message_utils.py  test_sensor.py  test_simulation.py  test_source.py  test_spectrum.py
tests/core_tests/: test_client.py  test_geometry.py  test_intensity_template.py  test_job.py  test_logging.py  test_scene.py  test_sensor_template.py  test_simulation_template.py  test_sop_template.py  test_source_template.py  test_spectrum.py  test_vop_template.py
tests/jupyter_notebooks/: core_api_create_speos_project.ipynb  core_camera_modify.ipynb  core_modify_camera.ipynb  core_object_link.ipynb  core_scene_job.ipynb  script_api_create_speos_project.ipynb  script_intensity.ipynb  script_lpf_preview.ipynb  script_material_study.ipynb  script_mesh_edit_washout.ipynb  script_opt_prop.ipynb  script_part.ipynb  script_prism_example.ipynb  script_project.ipynb  script_sensor.ipynb  script_simulation.ipynb  script_source.ipynb  script_spectrum.ipynb  test_camera_modify.ipynb  workflow_assemble_scene.ipynb  workflow_assemble_scene_simplified.ipynb  workflow_catalog_usage.ipynb  workflow_combine_speos_cars.ipynb  workflow_create_spectral_bsdf.ipynb  workflow_modify_camera.ipynb  workflow_modify_irradiance.ipynb  workflow_open_result.ipynb
tests/kernel/: __init__.py  test_client.py  test_geometry.py  test_intensity_template.py  test_job.py  test_logging.py  test_map.py  test_scene.py  test_sensor_template.py  test_simulation_template.py  test_sop_template.py  test_source_template.py  test_spectrum.py  (+1 more)
version/: index.html
(+3341 files in other folders)
