[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-speos"
version = "0.1.dev0"
description = "A Python wrapper for Ansys Speos"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies=[
    "protobuf>=3.20,<6",
    "grpcio==1.70.0",
    "grpcio-health-checking==1.48.2",
    "ansys-api-speos==0.14.1",
    "numpy~=2.2.0",
    "pyvista==0.44.2",
    "comtypes==1.4.9",
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.4",
    "ansys-platform-instancemanagement>=1.0.3",
    "pytest-cov==6.0.0",
]
jupyter = [
    "matplotlib",
    "jupyterlab>=3",
    "ipywidgets",
    "pyvista[jupyter]==0.44.2",
]
doc = [
    "ansys-sphinx-theme==1.1.6",
    "numpydoc==1.8.0",
    "Sphinx==8.1.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-autoapi==3.4.0",
    "sphinx_design==0.6.1",
    "sphinx-jinja==2.0.2",
    "myst-parser==4.0.0",
    "nbsphinx==0.9.6",
    "jupytext==1.16.6",
    "jupyterlab==4.3.4",
    "jupyter-server==2.15.0",
    "nbconvert==7.16.6",
    "pyvista[jupyter]==0.44.2",
]

[project.urls]
Source = "https://github.com/ansys/pyspeos"
Issues = "https://github.com/ansys/pyspeos/issues"
Discussions = "https://github.com/ansys/pyspeos/discussions"
Documentation = "https://speos.docs.pyansys.com/"
Releases = "https://github.com/ansys/pyspeos/releases"
Changelog = "https://github.com/ansys/pyspeos/blob/main/doc/source/changelog.rst"

[tool.flit.module]
name = "ansys.speos"

[tool.ruff]
line-length = 100
fix = true
extend-exclude = ["tests/assets"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys.speos.core"]

[tool.coverage.run]
source = ["ansys.speos.core", "ansys.speos.script", "ansys.speos.workflow"]

[tool.coverage.report]
show_missing = true