[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-speos"
version = "0.1.dev0"
description = "A Python wrapper for Ansys Speos"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies=[
    "protobuf>=3.20,<6",
    "grpcio==1.70.0",
    "grpcio-health-checking==1.48.2",
    "ansys-api-speos==0.14.1",
    "numpy~=2.2.0",
    "pyvista==0.44.2",
    "comtypes==1.4.9",
]

[project.optional-dependencies]
tests = [
    "pytest==8.3.4",
    "ansys-platform-instancemanagement>=1.0.3",
    "pytest-cov==6.0.0",
]
jupyter = [
    "matplotlib",
    "jupyterlab>=3",
    "ipywidgets",
    "pyvista[jupyter]==0.44.2",
]
doc = [
    "ansys-sphinx-theme==1.1.6",
    "numpydoc==1.8.0",
    "Sphinx==8.1.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-autoapi==3.4.0",
    "sphinx_design==0.6.1",
    "sphinx-jinja==2.0.2",
    "myst-parser==4.0.0",
    "nbsphinx==0.9.6",
    "jupytext==1.16.6",
    "jupyterlab==4.3.4",
    "jupyter-server==2.15.0",
    "nbconvert==7.16.6",
    "pyvista[jupyter]==0.44.2",
]

[tool.flit.module]
name = "ansys.speos"

[project.urls]
Source = "https://github.com/ansys-internal/pyspeos"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.speos.core", "ansys.speos.script", "ansys.speos.workflow"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-vvv --color=yes -ra --durations=25 --cov=ansys.speos --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term"
testpaths = ["tests"]

[tool.towncrier]
package = "ansys.speos.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
template = "doc/changelog.d/changelog_template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pyspeos/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyspeos/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
