[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-speos-core"
version = "0.10.dev0"
description = "A Python wrapper for Ansys Speos"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies=[
    "protobuf>=3.20",
    "grpcio>=1.50.0",
    "grpcio-health-checking>=1.45.0",
    "ansys-api-speos==0.16.2",
    "ansys-tools-common>=0.3.1",
    "numpy>=1.20.3,<3",
    "comtypes>=1.4,<1.5; platform_system=='Windows'"
]

[project.optional-dependencies]
graphics = [
    "pyvista>=0.45,<0.49",
    "ansys-tools-visualization-interface>=0.8.3"
]
jupyter = [
    "matplotlib",
    "jupyterlab>=3",
    "ipywidgets",
    "pyvista[jupyter]>=0.45,<0.49",
    "ansys-tools-visualization-interface>=0.8.3",
    "notebook"
]
all = [
    "pyvista>=0.45,<0.49",
    "ansys-tools-visualization-interface>=0.8.3",
    "ansys-platform-instancemanagement"
]

[dependency-groups]
dev = [
  { include-group = "doc" },
  { include-group = "quality" },
  { include-group = "tests" },
]
doc = [
    "ansys-sphinx-theme[autoapi]>=1.8.2",
    "ipykernel",
    "jupytext>=1.19.3",
    "nbconvert>=7.17.0",
    "nbsphinx>=0.9.8",
    "numpydoc>=1.10.0",
    "myst-parser>=4.0.1",
    "Sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-mermaid>=2.0.2",
]
quality = [
  "prek==0.4.4",
  "ruff==0.15.16",
  "ty==0.0.49",
]
tests = [
    "psutil",
    "pytest",
    "pytest-cov"
]

[project.urls]
Source = "https://github.com/ansys/pyspeos"
Issues = "https://github.com/ansys/pyspeos/issues"
Discussions = "https://github.com/ansys/pyspeos/discussions"
Documentation = "https://speos.docs.pyansys.com/"
Releases = "https://github.com/ansys/pyspeos/releases"
Changelog = "https://github.com/ansys/pyspeos/blob/main/doc/source/changelog.rst"

[tool.flit.module]
name = "ansys.speos.core"

[tool.flit.sdist]
include = ["ansys/speos/core/py.typed"]

[tool.ruff]
line-length = 100
fix = true
extend-exclude = ["tests/assets"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle, see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "D",    # pydocstyle, see https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # pyflakes, see https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort, see https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming, see https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PTH",  # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "TD",   # flake8-todos, https://docs.astral.sh/ruff/rules/#flake8-todos-td
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["D100", "E402"]
"__init__.py" = ["F401"]
"doc/source/conf.py" = ["N806"]

[tool.ruff.lint.pep8-naming]
ignore-names = [
    "set_colorimetric_standard_CIE_1964",
    "set_colorimetric_standard_CIE_1931",
    "setLevel",
    "set_FWHM_angle_y",
    "set_FWHM_angle_x",
    "compute_CPU",
    "compute_GPU",
    "set_whiteLED"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys.speos.core"]

[tool.coverage.run]
source = ["ansys.speos.core"]

[tool.ty.environment]
root = ["src", "examples"]

[tool.ty.src]
exclude = [
    "src/ansys/speos/core/body.py",
    "src/ansys/speos/core/component.py",
    "src/ansys/speos/core/face.py",
    "src/ansys/speos/core/bsdf.py",
    "src/ansys/speos/core/launcher.py",
    "src/ansys/speos/core/intensity.py",
    "src/ansys/speos/core/ground_plane.py",
    "src/ansys/speos/core/geo_ref.py",
    "src/ansys/speos/core/logger.py",
    "src/ansys/speos/core/lxp.py",
    "src/ansys/speos/core/part.py",
    "src/ansys/speos/core/opt_prop.py",
    "src/ansys/speos/core/project.py",
    "src/ansys/speos/core/proto_message_utils.py",
    "src/ansys/speos/core/source.py",
    "src/ansys/speos/core/spectrum.py",
    "src/ansys/speos/core/simulation.py",
    "src/ansys/speos/core/sensor.py",
    "src/ansys/speos/core/generic",
    "src/ansys/speos/core/kernel",
    "src/ansys/speos/core/workflow",
    "examples/core",
    "examples/kernel",
    "examples/workflow",
    "tests",
]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-vvv --color=yes -ra --durations=25 --cov=ansys.speos --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term"
testpaths = ["tests"]
markers = [
    "all_speos_versions: Supported on all Speos versions.",
    "supported_speos_versions(min, max): Feature only supported from minimal to maximal Speos versions."
]

[tool.towncrier]
package = "ansys.speos.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
template = "doc/changelog.d/changelog_template.jinja"
start_string = ".. towncrier release notes start\n"
title_format = "`{version} <https://github.com/ansys/pyspeos/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyspeos/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
